// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epics/life should get access token 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Object {
      "accessToken": undefined,
    },
    "type": "GET_ACCESS_TOKEN_SUCCESS",
  },
]
`;

exports[`epics/lists | error case: no network should get access token 1`] = `
Array [
  Object {
    "payload": [Error: Error 404],
    "type": "GET_ACCESS_TOKEN_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get access token 1`] = `
Array [
  Object {
    "payload": [Error: response.json is not a function],
    "type": "GET_ACCESS_TOKEN_FAILURE",
  },
]
`;
